# false-nine

./: CMakeLists.txt  LICENSE.txt  README.md
include/: AccessPath.h  AccessPathDFA.h  Common.h  DeadMemoryFreePass.h  MemoryGraph.h  MemoryGraphPass.h
src/: AccessPath.cc  AccessPathDFA.cc  Common.cc  DeadMemoryFreePass.cc  MemoryGraph.cc  MemoryGraphPass.cc
tests/: Makefile  correctness-check-benchmark.c  interprocedural-benchmark.c  intraprocedural-linked-list-benchmark.c
